--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./src/styles/globalStyles.css">
     <link rel="stylesheet" href="./src/styles/index.css">
   </head>
+
+  <!-- teste github -->
   <body>
     <!-- ====== Header ====== -->
     <header>
