--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./src/styles/index.css">
   </head>
 
-  <!-- teste github -->
+  <!-- teste github 2-->
   <body>
     <!-- ====== Header ====== -->
     <header>
