--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Página Institucional Genérica</title>
   <link rel="stylesheet" href="./src/styles/globalStyles.css">
-  <link rel="stylesheet" href="./src/styles/teste.css">
+  <link rel="stylesheet" href="./src/styles/index.css">
   <script src="./src/scripts/index.js" defer></script>
 </head>
 
