--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s</p>
       <form id="emailForm" class="email-form">
-        <input type="email" id="emailInput" placeholder="Seu e-mail aqui" class="email-input" />
+        <input type="email" id="emailInput" placeholder="Digitar email" class="email-input" />
         <button type="submit" class="submit-button"></button>
       </form>
       <div class="modal-footer">
