--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
     <img class="footer__logo" src="./src/assets/logo.svg.png" alt="Imagem do rodapé" />
   </footer>
   <!-- ====== Modal ====== -->
-  <div id="modal" class="modal">
+
+  <dialog id="modal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
         <h2>Cadastro</h2>
@@ -215,8 +216,7 @@
       <div class="modal-footer">
         <button class="modal-button">Entrar na lista para próxima turma.</button>
       </div>
-    </div>
-  </div>
+    </div>  
   </dialog>
 </body>
 </html>
